feat: 적절한 로또번호 생성기 만드는 기능 추가
수동 기능 지원